# guidstuff

./: README.md  alembic.ini  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 1a81d095b878_create_whatever_table.py  3e4cd18cb2a2_create_whatever_table.py  fe08b6f6163b_create_whatever_table.py
src/guidstuff/: database.py  main.py  models.py
