[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guidstuff"
version = "0.0.1"
description = ""
dependencies = [
  "litestar @ git+https://github.com/litestar-org/litestar.git@main",
  "sqlalchemy",
  "asyncpg",
  "alembic",
]

[tool.hatch.metadata]
allow-direct-references = true
